--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
                 <h3><span>Father's Name: </span>Anil Singh.</h3>
                 <h3><span>D.O.B.: </span>13-07-2001.</h3>
                 <h3><span>Gender: </span>Male.</h3> 
-                <h3><span>Email: </span>ankitsingh.mahthan07@gmail.com.</h3>
-                <h3><span>Phone_no: </span>9835832178.</h3>
                 <h3><span>Languages Known: </span>English | Hindi .</h3>
                 <h3><span>Address: </span>Maniyaradih, Nabinagar, Aurangabad, BIHAR - 824301.</h3>
                 <h3><span>GitHub:</span><a href="https://www.github.com/asgaddi07" target="_blank">https://www.github.com/asgaddi07</a></h3>
-                <h3><span>Linkdln: </span><a href="https:www.linkedin.com/in/asgaddi07" target="_blank">https:www.linkedin.com/in/asgaddi07</a></h3>
+                <h3><span>Linkdln: </span><a href="https://www.linkedin.com/in/asgaddi07/" target="_blank">https:www.linkedin.com/in/asgaddi07</a></h3>
             </div>
         </div>
         </section>
@@ -165,7 +163,7 @@
                     and see the academic,skills,certification and etc.</h3>
                 <h3><span>Technology:</span>Html, CSS, JavaScript, Firebase.</h3>
                 <h3><span>Links:</span><a href="">GitHub Project Link</a></h3>
-                <h3><span>Host:</span><a href="">Website Host.</a></h3>
+                <h3><span>Host:</span><a href="https://asgaddi07.github.io/Ankit-Kumar-Singh-Portfolio-/" target="_blank">Website Host.</a></h3>
 
             </div>
             <div class="det">
