--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h3><span>Languages Known: </span>English | Hindi .</h3>
                 <h3><span>Address: </span>Maniyaradih, Nabinagar, Aurangabad, BIHAR - 824301.</h3>
                 <h3><span>GitHub:</span><a href="https://www.github.com/asgaddi07" target="_blank">https://www.github.com/asgaddi07</a></h3>
-                <h3><span>Linkdln: </span><a href="https://www.linkedin.com/in/asgaddi07/" target="_blank">https:www.linkedin.com/in/asgaddi07</a></h3>
+                <h3><span>Linkdln: </span><a href="https://www.linkedin.com/in/asgaddi07" target="_blank">https:www.linkedin.com/in/asgaddi07</a></h3>
             </div>
         </div>
         </section>
