--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 <h3><span>D.O.B.: </span>13-07-2001.</h3>
                 <h3><span>Gender: </span>Male.</h3> 
                 <h3><span>Languages Known: </span>English | Hindi .</h3>
-                <h3><span>Address: </span>Maniyaradih, Nabinagar, Aurangabad, BIHAR - 824301.</h3>
+                <h3><span>Address: </span> Nabinagar, Aurangabad, BIHAR - 824301.</h3>
+                <h3><span>Email:</span><a href="mailto:ankit_singh@outlook.in" target="_blank">ankit_singh@outlook.in</a></h3>
                 <h3><span>GitHub:</span><a href="https://www.github.com/asgaddi07" target="_blank">https://www.github.com/asgaddi07</a></h3>
                 <h3><span>Linkdln: </span><a href="https://www.linkedin.com/in/asgaddi07" target="_blank">https:www.linkedin.com/in/asgaddi07</a></h3>
             </div>
@@ -61,16 +62,10 @@
                 <div>
                     <ul id="lis">
                         <li>Explore Things.</li>
-                        <li>Codeing.</li>
-                        <li>Bussiness.</li>
                         <li>Software.</li>
                         <li>Reading.</li>
-                        <li>Bussiness.</li>
                         <li>Yoga.</li>
-                        <li>Chess.</li>
-                        <li>Sudoku.</li>
-                        <li>Gym.</li>
-                        <li>Karv Maga.</li>
+                        <li>Sport.</li>
                     </ul>
                 </div>
             </section>
@@ -109,10 +104,11 @@
         <h1 class="head"><span>Technical Skills</span></h1>
         <div>
             <ul id="lis">
-                <li>Java.</li>
-                <li>C++.</li>
-                <li>HTML, CSS, JavaScript.</li>
+                <li>Java/C++/C.</li> 
+                <li>HTML/JSP, CSS, JavaScript.</li>
                 <li>DSA.</li>
+                <li>Hibernate.</li>
+                <li>BootStrap.</li>
                 <li>SQL.</li>
                 <li>GitHub.</li>
             </ul>
@@ -163,7 +159,7 @@
                 <h3><span>Description: </span>This project belongs to Personal Portfolio Website. Any people can visite the site
                     and see the academic,skills,certification and etc.</h3>
                 <h3><span>Technology:</span>Html, CSS, JavaScript, Firebase.</h3>
-                <h3><span>Links:</span><a href="">GitHub Project Link</a></h3>
+                <h3><span>Links:</span><a href="https://github.com/asgaddi07/Ankit-Kumar-Singh-Portfolio-" target="_blank">GitHub Project Link</a></h3>
                 <h3><span>Host:</span><a href="https://asgaddi07.github.io/Ankit-Kumar-Singh-Portfolio-/" target="_blank">Website Host.</a></h3>
 
             </div>
@@ -175,7 +171,7 @@
                     Order the productes.
                     The admin can add,edit,delete the product.</h3>
                 <h3><span>Technology:</span>Java, Html, CSS, JavaScript, BootStrap, Hibernate, Sql.</h3>
-                <h3><span>Links:</span><a href="">GitHub Project Link</a></h3> 
+                <h3><span>Links:</span><a href="https://github.com/asgaddi07/Ecommerce" target="_blank">GitHub Project Link</a></h3> 
             </div>
         </div>
     </section>
