--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     and see the academic,skills,certification and etc.</h3>
                 <h3><span>Technology:</span>Html, CSS, JavaScript, Firebase.</h3>
                 <h3><span>Links:</span><a href="https://github.com/asgaddi07/Ankit-Kumar-Singh-Portfolio-" target="_blank">GitHub Project Link</a></h3>
-                <h3><span>Host:</span><a href="https://asgaddi07.github.io/Ankit-Kumar-Singh-Portfolio-/" target="_blank">Website Host.</a></h3>
+                <h3><span>Host:</span><a href="https://asgaddi07.github.io/ankitSingh/" target="_blank">Website Host.</a></h3>
 
             </div>
             <div class="det">
