--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@
             <h1 class="heading"><span>Hobby And Interest</span></h1>
                 <div>
                     <ul id="lis">
+                        <li>Cricket .</li>
+                        <li>Chess.</li>
                         <li>Explore Things.</li>
-                        <li>Software.</li>
                         <li>Reading.</li>
+                        <li>Bussiness.</li>
                         <li>Yoga.</li>
-                        <li>Sport.</li>
+                        <li>Software.</li>
+                        <li>Coding.</li>
                     </ul>
                 </div>
             </section>
