--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 
     <!-- js --> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
-    <script src="index.js"></script> 
+    <script src="/index.js"></script> 
 
 </body>
 
