--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="container">
                     <div class="intro">
                         <img src="photo.jpg" alt="profile" class="shadow-dark">
-                        <h1> Hello dear, I'm<br>Ankit kumar Singh </h1>
+                        <h1> Hii, I'm<br>Ankit kumar Singh </h1>
                         <p> Software Developer with good problem solving, leadership and creative skills .
                             Always looking to upgrade or learn new skills and technology.</p>
                         <div class="social-links">
