--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                                             <li>Management & Coordination.</li>
                                             <li>Team Leadership.</li>
                                             <li>Good at networking and interpersonal skills.</li>
-                                            <li>Time Management and dependability or Able to work with deadlines.</li>
+                                            <li>Time Management and dependability and able to work with deadlines.</li>
                                             <li>Good collaboration and co-ordination skills.</li>
-                                            <li>Strategic Thinker/Able to work in a team or Focussed at work.</li>
+                                            <li>Strategic thinker and focussed at work.</li>
                                         </ul>
                                     </p>
                                 </div>
