--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
                                     <h4 class="boxA-title"> INTERMEDIATE </h4>
                                     <p class="boxA-desc">
                                         <ul>
-                                            <li><span> Name of the institute: </span> Chandigarh University,
-                                                Gharuan, Mohali, PUNJAB, 140413. </li>
-                                            <li><span> Session: </span>2019-2023. </li>
-                                            <li><span> Percentage/CGPA: </span> 6.96 CGPA . </li> 
+                                            <li><span> Name of the institute: </span> Intermediate (CBSE) | D.A.V Public School, Sector-04, Bokaro Stell City, 
+                                                JHARKHAND</li>
+                                            <li><span> Session: </span>2017-2019. </li>
+                                            <li><span> Percentage/CGPA: </span> 62 % . </li> 
                                         </ul>
                                     </p>
                                 </div>
