--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <img src="photo.jpg" alt="profile" class="shadow-dark">
                         <h1> Hii, I'm<br>Ankit kumar Singh </h1>
                         <p> Software Developer with good problem solving, leadership and creative skills .
-                            Always looking to upgrade or learn new skills and technology.</p>
+                            Always looking to upgrade old and learn new skills and technology.</p>
                         <div class="social-links">
                             <a href="https://www.github.com/asgaddi07" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="motherlto:ankit_singh@outlook.in" target="_blank"><i class="fa fa-envelope"></i></a>
