--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                             <a href="motherlto:ankit_singh@outlook.in" target="_blank"><i class="fa fa-envelope"></i></a>
                             <a href="https://www.linkedin.com/in/asgaddi07" target="_blank"><i
                                     class="fab fa-linkedin-in"></i></a>
-                        </div>
+                        </div></div><br/>
+                        <div><a href="Ankit's Resume.pdf" target="_blank"><button class="btn">Download Resume.</button></a></div>
                     </div>
                     <div class="row">
                         <div class="section-title padd-15">
@@ -165,8 +166,9 @@
                                     <h4 class="boxA-title"> INTERMEDIATE </h4>
                                     <p class="boxA-desc">
                                         <ul>
-                                            <li><span> Name of the institute: </span> Intermediate (CBSE) | D.A.V Public School, Sector-04, Bokaro Stell City, 
-                                                JHARKHAND</li>
+                                            <li><span> Name of the institute: </span> Intermediate (CBSE) | D.A.V Public School,
+                                                Sector-04, Bokaro Steel City,
+                                                JHARKHAND, 827004.</li>
                                             <li><span> Session: </span>2017-2019. </li>
                                             <li><span> Percentage/CGPA: </span> 62 % . </li> 
                                         </ul>
