--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ankit Kumar Singh | Java Software Developer</title>  
-    <link rel="stylesheet" href="styles.css"> 
+    <title>Ankit Kumar Singh | Java Software Developer</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
         integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
         crossorigin="anonymous" />
 
     <!-- Live Style Switcher -->
-    <link rel="stylesheet" class="alternate-style" title="pink" href="pink.css" disabled >
-    <link rel="stylesheet" class="alternate-style" title="blue" href="blue.css" >
+    <link rel="stylesheet" class="alternate-style" title="pink" href="pink.css" disabled>
+    <link rel="stylesheet" class="alternate-style" title="blue" href="blue.css">
     <link rel="stylesheet" class="alternate-style" title="orange" href="orange.css" disabled>
     <link rel="stylesheet" class="alternate-style" title="yellow" href="yellow.css" disabled>
     <link rel="stylesheet" class="alternate-style" title="green" href="green.css" disabled>
 </head>
 
-<body> 
+<body>
     <div class="main-container">
         <!-- Aside  -->
         <div class="aside">
@@ -35,12 +35,12 @@
             <!-- Navigation -->
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="#education"><i class="fa fa-graduation-cap" ></i> Education</a></li>
+                <li><a href="#education"><i class="fa fa-graduation-cap"></i> Education</a></li>
                 <li><a href="#technicalSkills"><i class="fa fa-code"></i> Technical Skills</a></li>
                 <li><a href="#certification"><i class="fa fa-certificate"></i> Certification</a></li>
                 <li><a href="#project"><i class="fa fa-laptop"></i> Project</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i> contact</a></li>
-            </ul> 
+            </ul>
         </div>
         <!-- Aside End -->
         <!-- Main Content Start-->
@@ -55,12 +55,14 @@
                             Always looking to upgrade old and learn new skills and technology.</p>
                         <div class="social-links">
                             <a href="https://www.github.com/asgaddi07" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="motherlto:ankit_singh@outlook.in" target="_blank"><i class="fa fa-envelope"></i></a>
+                            <a href="motherlto:ankit_singh@outlook.in" target="_blank"><i
+                                    class="fa fa-envelope"></i></a>
                             <a href="https://www.linkedin.com/in/asgaddi07" target="_blank"><i
                                     class="fab fa-linkedin-in"></i></a>
-                        </div></div><br/>
+                        </div><br/>
                         <div><a href="Ankit's Resume.pdf" target="_blank"><button class="btn">Download Resume.</button></a></div>
                     </div>
+
                     <div class="row">
                         <div class="section-title padd-15">
                             <h2>Other Details</h2>
@@ -73,14 +75,14 @@
                                 <div class="boxA-info">
                                     <h4 class="boxA-title"> Personal Details </h4>
                                     <p class="boxA-desc">
-                                        <ul>
-                                            <li><span>Name: </span>Ankit Kumar Singh.</li>
-                                            <li><span>Mother's Name: </span>Baby Devi.</li>
-                                            <li><span>Father's Name: </span>Anil Singh.</li>
-                                            <li><span>D.O.B.: </span>13-07-2001.</li>
-                                            <li><span>Gender: </span>Male.</li>
-                                            <li><span>Languages Known: </span>English | Hindi .</li>
-                                        </ul>
+                                    <ul>
+                                        <li><span>Name: </span>Ankit Kumar Singh.</li>
+                                        <li><span>Mother's Name: </span>Baby Devi.</li>
+                                        <li><span>Father's Name: </span>Anil Singh.</li>
+                                        <li><span>D.O.B.: </span>13-07-2001.</li>
+                                        <li><span>Gender: </span>Male.</li>
+                                        <li><span>Languages Known: </span>English | Hindi .</li>
+                                    </ul>
                                     </p>
                                 </div>
                             </div>
@@ -93,14 +95,14 @@
                                 <div class="boxA-info">
                                     <h4 class="boxA-title"> Hobby & Interest </h4>
                                     <p class="boxA-desc">
-                                        <ul>
-                                            <li>Politics.</li>
-                                            <li>Learning | Chess.</li>
-                                            <li>Cricket | Sudoku.</li>
-                                            <li>Software | Coding.</li>
-                                            <li>Explore Things | Bussiness.</li>
-                                            <li>Yoga | Exercise.</li>
-                                         </ul>
+                                    <ul>
+                                        <li>Politics.</li>
+                                        <li>Learning | Chess.</li>
+                                        <li>Cricket | Sudoku.</li>
+                                        <li>Software | Coding.</li>
+                                        <li>Explore Things | Bussiness.</li>
+                                        <li>Yoga | Exercise.</li>
+                                    </ul>
                                     </p>
                                 </div>
                             </div>
@@ -113,21 +115,21 @@
                                 <div class="boxA-info">
                                     <h4 class="boxA-title"> Personal Skills </h4>
                                     <p class="boxA-desc">
-                                        <ul>
-                                            <li>Decision Making.</li>
-                                            <li>Management & Coordination.</li>
-                                            <li>Team Leadership.</li>
-                                            <li>Good at networking and interpersonal skills.</li>
-                                            <li>Time Management and dependability and able to work with deadlines.</li>
-                                            <li>Good collaboration and co-ordination skills.</li>
-                                            <li>Strategic thinker and focussed at work.</li>
-                                        </ul>
+                                    <ul>
+                                        <li>Decision Making.</li>
+                                        <li>Management & Coordination.</li>
+                                        <li>Team Leadership.</li>
+                                        <li>Good at networking and interpersonal skills.</li>
+                                        <li>Time Management and dependability and able to work with deadlines.</li>
+                                        <li>Good collaboration and co-ordination skills.</li>
+                                        <li>Strategic thinker and focussed at work.</li>
+                                    </ul>
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <!-- Item End -->
-                    </div> 
+                    </div>
                 </div>
             </section>
             <!-- Home section End -->
@@ -147,12 +149,12 @@
                                 <div class="boxA-info">
                                     <h4 class="boxA-title"> UNDERGRADUATE </h4>
                                     <p class="boxA-desc">
-                                        <ul>
-                                            <li><span> Name of the institute: </span> Chandigarh University,
-                                                Gharuan, Mohali, PUNJAB, 140413. </li>
-                                            <li><span> Session: </span>2019-2023. </li>
-                                            <li><span> Percentage/CGPA: </span> 6.96 CGPA . </li> 
-                                        </ul>
+                                    <ul>
+                                        <li><span> Name of the institute: </span> Chandigarh University,
+                                            Gharuan, Mohali, PUNJAB, 140413. </li>
+                                        <li><span> Session: </span>2019-2023. </li>
+                                        <li><span> Percentage/CGPA: </span> 6.96 CGPA . </li>
+                                    </ul>
                                     </p>
                                 </div>
                             </div>
@@ -165,13 +167,14 @@
                                 <div class="boxA-info">
                                     <h4 class="boxA-title"> INTERMEDIATE </h4>
                                     <p class="boxA-desc">
-                                        <ul>
-                                            <li><span> Name of the institute: </span> Intermediate (CBSE) | D.A.V Public School,
-                                                Sector-04, Bokaro Steel City,
-                                                JHARKHAND, 827004.</li>
-                                            <li><span> Session: </span>2017-2019. </li>
-                                            <li><span> Percentage/CGPA: </span> 62 % . </li> 
-                                        </ul>
+                                    <ul>
+                                        <li><span> Name of the institute: </span> Intermediate (CBSE) | D.A.V Public
+                                            School,
+                                            Sector-04, Bokaro Steel City,
+                                            JHARKHAND, 827004.</li>
+                                        <li><span> Session: </span>2017-2019. </li>
+                                        <li><span> Percentage/CGPA: </span> 62 % . </li>
+                                    </ul>
                                     </p>
                                 </div>
                             </div>
@@ -184,19 +187,19 @@
                                 <div class="boxA-info">
                                     <h4 class="boxA-title"> MATRICULATION </h4>
                                     <p class="boxA-desc">
-                                        <ul>
-                                            <li><span> Name of the institute: </span> D.A.V Public School,
-                                                Nabinagar, Aurangabad, BIHAR, 824301. </li>
-                                            <li><span> Session: </span>2019-2023.</li>
-                                            <li><span> Percentage/CGPA: </span> 9.8 CGPA.</li>
-                                        </ul>
+                                    <ul>
+                                        <li><span> Name of the institute: </span> D.A.V Public School,
+                                            Nabinagar, Aurangabad, BIHAR, 824301. </li>
+                                        <li><span> Session: </span>2019-2023.</li>
+                                        <li><span> Percentage/CGPA: </span> 9.8 CGPA.</li>
+                                    </ul>
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <!-- Item End -->
                     </div>
-                </div> 
+                </div>
             </section>
             <!-- Education Section End -->
 
@@ -215,7 +218,7 @@
                             <div class="boxB-item-inner">
                                 <div class="icon"><img src="java-icon.png" alt="Java" width="60px" height="60px" />
                                 </div>
-                                <h4>Java</h4> 
+                                <h4>Java</h4>
                             </div>
                         </div>
                         <!-- Item End -->
@@ -224,7 +227,7 @@
                         <div class="boxB-item padd-15">
                             <div class="boxB-item-inner">
                                 <div class="icon"><img src="dsa-icon.webp" alt="Dsa" width="60px" height="60px" /></div>
-                                <h4>DSA</h4> 
+                                <h4>DSA</h4>
                             </div>
                         </div>
                         <!-- Item End -->
@@ -234,12 +237,12 @@
                             <div class="boxB-item-inner">
                                 <div class="icon"><img src="jspServlet-icon.png" alt="Jsp & Servlet" width="70px"
                                         height="50px" /></div>
-                                <h4>Jsp & Servlet</h4> 
+                                <h4>Jsp & Servlet</h4>
                             </div>
                         </div>
                         <!-- Item End -->
 
-                       <!-- Item Start -->
+                        <!-- Item Start -->
                         <!-- <div class="boxB-item padd-15">
                             <div class="boxB-item-inner">
                                 <div class="icon"><img src="jdbc-icon.png" alt="Jdbc" width="60px" height="60px" />
@@ -283,7 +286,7 @@
                         <div class="boxB-item padd-15">
                             <div class="boxB-item-inner">
                                 <div class="icon"><img src="sql-icon.png" alt="Sql" width="60px" height="60px" /></div>
-                                <h4>Sql</h4> 
+                                <h4>Sql</h4>
                             </div>
                         </div>
                         <!-- Item End -->
@@ -293,7 +296,7 @@
                             <div class="boxB-item-inner">
                                 <div class="icon"><img src="manualTest-icon.png" alt="Manual Testing" width="60px"
                                         height="60px" /></div>
-                                <h4>Manual Testing</h4> 
+                                <h4>Manual Testing</h4>
                             </div>
                         </div>
                         <!-- Item End -->
@@ -303,7 +306,7 @@
                             <div class="boxB-item-inner">
                                 <div class="icon"><img src="gitGitHub-icon.png" alt="Git & GitHub" width="60px"
                                         height="60px" /></div>
-                                <h4>Git & GitHub</h4> 
+                                <h4>Git & GitHub</h4>
                             </div>
                         </div>
                         <!-- Item End -->
@@ -333,7 +336,7 @@
                             <div class="boxB-item-inner">
                                 <div class="icon"><img src="htmlCssJs-icon.png" alt="Html, Css & JavaScript"
                                         width="60px" height="60px" /></div>
-                                <h4>Html, Css & JavaScript</h4> 
+                                <h4>Html, Css & JavaScript</h4>
                             </div>
                         </div>
                         <!-- Item End -->
@@ -342,7 +345,7 @@
                         <div class="boxB-item padd-15">
                             <div class="boxB-item-inner">
                                 <div class="icon"><img src="c-icon.png" alt="C" width="60px" height="60px" /></div>
-                                <h4>c</h4> 
+                                <h4>c</h4>
                             </div>
                         </div>
                         <!-- Item End -->
@@ -351,10 +354,10 @@
                         <div class="boxB-item padd-15">
                             <div class="boxB-item-inner">
                                 <div class="icon"><img src="c++-icon.png" alt="C++" width="60px" height="60px" /></div>
-                                <h4>C++</h4> 
+                                <h4>C++</h4>
                             </div>
                         </div>
-                        <!-- Item End --> 
+                        <!-- Item End -->
 
                     </div>
                 </div>
@@ -510,8 +513,7 @@
                                         Any people can visite the site
                                         and see the academic,skills,certification and etc.<br />
                                         <span>Technology:</span>Html, CSS, JavaScript, Firebase.<br />
-                                        <span>Links:</span><a
-                                            href="https://github.com/asgaddi07/ankitSingh"
+                                        <span>Links:</span><a href="https://github.com/asgaddi07/ankitSingh"
                                             target="_blank">GitHub Project Link</a><br />
                                         <span>Host:</span><a href="https://asgaddi07.github.io/ankitSingh/"
                                             target="_blank">Website Host</a><br />
@@ -552,7 +554,7 @@
                     </div>
                     <!-- boxD Form -->
                     <div class="row">
-                        <form  class="boxD-form padd-15" id="boxDUs">
+                        <form class="boxD-form padd-15" id="boxDUs">
                             <div class="row">
                                 <div class="form-item col-6 padd-15">
                                     <div class="form-group">
@@ -600,10 +602,10 @@
     <!-- Lightbox -->
     <div class="lightbox">
         <div class="lightbox-content">
-            <div class="lightbox-close">&times;</div> 
+            <div class="lightbox-close">&times;</div>
             <img alt="DisplayImage" class="lightbox-img" onclick="prevItem()">
-            <div class="lightbox-caption"> 
-                <div class="caption-text"></div> 
+            <div class="lightbox-caption">
+                <div class="caption-text"></div>
                 <div class="caption-counter"></div>
             </div>
         </div>
@@ -645,9 +647,9 @@
     <!-- Live Style Switcher End -->
 
 
-    <!-- js --> 
+    <!-- js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
- <script src="index.js"></script>
+    <script src="index.js"></script>
 
 </body>
 
